<resources>
    <string name="app_name">hotelMascotas</string>
<<<<<<< HEAD
    <string name="que_desea_buscar">¿Que desea buscar?</string>
    <string name="acerca_de">Acerca de</string>
    <string name="ingresar_ubicaci_n">Ingresar ubicación</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="salir">Salir</string>
    <string name="todo">TODO</string>
    <string name="agrega_m_scota">agrega máscota</string>
    <string name="mensajear_h_roe">mensajear héroe</string>
    <string name="editar_usuario">Editar usuario</string>
    <string name="hospedaje_mascota">Hospedaje mascota</string>
=======
    <string name="title_activity_startup2">startupActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
>>>>>>> Joaquin
</resources>
